Add AES GCM file encryptions

--- a/crypto/aes/Makefile
+++ b/crypto/aes/Makefile
@@ -1,8 +1,8 @@
 CC=gcc
 CFLAGS=-Wall
-LIBS= -lwolfssl
+LIBS= -lwolfssl -lm
 
-all: aes-file-encrypt aescfb-file-encrypt aesctr-file-encrypt
+all: aes-file-encrypt aescfb-file-encrypt aesctr-file-encrypt aesgcm-file-encrypt
 
 aes-file-encrypt: aes-file-encrypt.o
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS) 
@@ -13,7 +13,10 @@ aescfb-file-encrypt: aescfb-file-encrypt.o
 aesctr-file-encrypt: aesctr-file-encrypt.o
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
+aesgcm-file-encrypt: aesgcm-file-encrypt.o
+	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+
 .PHONY: clean
 
 clean:
-	rm -f *.o aes-file-encrypt aescfb-file-encrypt aesctr-file-encrypt
+	rm -f *.o aes-file-encrypt aescfb-file-encrypt aesctr-file-encrypt aesgcm-file-encrypt text*
