--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,8 @@ android/wolfssljni-ndk-sample/proguard-project.txt
 /tls/server-tls-uart
 /tls/server-tls-verifycallback
 /tls/server-tls-writedup
+/tls/client-ech-local
+/tls/server-ech-local
 
 
 
