add example of how to use HPKE with all options (#356)
* add example of how to use HPKE with all options

* add example of how to use ech with a public server run by cloudflare

* move ech example to tls directory, update hpke instructions

* update client-ech based on pr comments

* update ech test to handle read error

* update hpke_test to match changed function signature

* add root CA cert for ech-client example, fix

various problems based on pr comments

* clear out variable for example

* remove unused variable

--- a/.gitignore
+++ b/.gitignore
@@ -105,9 +105,9 @@ android/wolfssljni-ndk-sample/proguard-project.txt
 /tls/server-tls-uart
 /tls/server-tls-verifycallback
 /tls/server-tls-writedup
+/tls/client-ech
 /tls/client-ech-local
 /tls/server-ech-local
-
 
 
 crypto/3des/3des-file-encrypt
@@ -238,6 +238,7 @@ pk/ed448/ed448_pub
 pk/ed448/ed448_keys
 pk/ed448/*.der
 pk/curve25519/curve25519_test
+pk/hpke/hpke_test
 
 embedded/tls-client-server
 embedded/tls-server-size
