Update to support internal hardware initialization.

--- a/ccb_vaultic/Makefile
+++ b/ccb_vaultic/Makefile
@@ -16,8 +16,8 @@ CFLAGS+=-I. -O2
 OBJS=ccb_vaultic.o
 
 # Uncomment to enable verbose debug logging
-#CFLAGS+=-DCCBVAULTIC_DEBUG
-#CFLAGS+=-DCCBVAULTIC_DEBUG_ALL
+CFLAGS+=-DCCBVAULTIC_DEBUG
+CFLAGS+=-DCCBVAULTIC_DEBUG_ALL
 #CFLAGS+=-DSPI_TRACE_ERRORS
 
 # Optionally disable certain kinds of offload
@@ -46,7 +46,7 @@ CFLAGS+=-I$(VAULTIC_TLS)
 LDFLAGS+=-L$(VAULTIC_TLS)/VaultIC_420_TLS_Lib-SPI-Release -lvaultic420_tls
 
 #Test and Benchmark targets
-CFLAGS+=-DFORCE_DEVID=0x56490420 -DBENCH_EMBEDDED -DBENCH_DEVID -DNO_MAIN_DRIVER
+CFLAGS+=-DFORCE_DEVID=0x56490420 -DBENCH_EMBEDDED -DNO_MAIN_DRIVER
 TEST_OBJS:=$(WOLFSSL_DIR)/wolfcrypt/test/test.o main-test.o
 BENCH_OBJS:=$(WOLFSSL_DIR)/wolfcrypt/benchmark/benchmark.o main-bench.o
 
@@ -61,5 +61,5 @@ wolfcrypt-benchmark: $(OBJS) $(BENCH_OBJS)
 
 clean:
 	rm -f *.o *.d wolfcrypt-test wolfcrypt-benchmark
-	rm -f $(WOLFSSL)/wolfcrypt/benchmark/*.o
-	rm -f $(WOLFSSL)/wolfcrypt/test/*.o
+	rm -f $(WOLFSSL_DIR)/wolfcrypt/benchmark/*.o
+	rm -f $(WOLFSSL_DIR)/wolfcrypt/test/*.o
