Clean up folder structure
Expect to have libwolfssl installed system-wide.

--- a/crypto/MagicCrypto/Makefile
+++ b/crypto/MagicCrypto/Makefile
@@ -10,8 +10,7 @@ DEBUGOPT=
 #DEBUGOPT=-DWOLFSSL_DEBUG_TLS -DDEBUG_WOLFSSL -DDEBUG_CRYPTOCB
 #DEBUGOPT=-DWOLFSSL_DEBUG_TLS -DDEBUG_WOLFSSL
 
-COMMONOPT=-O0 -g -I.. -Iinclude -Llib -lwolfssl -lMagicCrypto -lm -DWOLF_CRYPTO_CB 
-#COMMONOPT=-O0 -g -I../ -Iinclude -lwolfssl -Llib -lMagicCrypto -lm
+COMMONOPT=-O0 -g -IMagicCrypto/include -LMagicCrypto/lib -lwolfssl -lMagicCrypto -lm -DWOLF_CRYPTO_CB 
 
 %: %.c $(DEPS)
 	$(CC) $< $(DEBUGOPT) $(COMMONOPT) -o $@
