--- a/RPi-Pico/CMakeLists.txt
+++ b/RPi-Pico/CMakeLists.txt
@@ -13,19 +13,12 @@ endif()
 project(wolf_pico_examples C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
+
 
 # Initialize the SDK
 pico_sdk_init()
-
-message("Example cmake project including wolfSSL with user_settings.h")
-
-# add global define to include user_settings.h
-add_compile_definitions(WOLFSSL_USER_SETTINGS)
-add_compile_definitions(WOLFSSL_USER_SETTINGS_ASM)
-set(BUILD_SHARED_LIBS OFF)
-set(WOLFSSL_EXAMPLES OFF)
-set(WOLFSSL_CRYPT_TESTS OFF)
-set(WOLFSSL_USER_SETTINGS ON)
 
 include_directories(config)
 include_directories(include)
@@ -34,82 +27,79 @@ include_directories(${PICO_SDK_PATH}/lib/lwip/contrib/ports/freertos/include)
 include_directories(${PICO_SDK_PATH}/lib/lwip/src/include)
 include_directories(${PICO_SDK_PATH}/src/rp2_common/pico_async_context/include)
 
-add_subdirectory(wolfssl)
-target_link_libraries(wolfssl PRIVATE
+set(WOLFSSL_ROOT $ENV{WOLFSSL_ROOT})
+include_directories(${WOLFSSL_ROOT})
+
+file(GLOB_RECURSE WOLFSSL_SRC
+    "${WOLFSSL_ROOT}/src/*.c"
+    "${WOLFSSL_ROOT}/wolfcrypt/src/*.c"
 )
+list(REMOVE_ITEM WOLFSSL_SRC EXCLUDE REGEX
+    "${WOLFSSL_ROOT}/src/bio.c"
+    "${WOLFSSL_ROOT}/src/conf.c"
+    "${WOLFSSL_ROOT}/src/pk.c"
+    "${WOLFSSL_ROOT}/src/ssl_asn1.c"
+    "${WOLFSSL_ROOT}/src/ssl_bn.c"
+    "${WOLFSSL_ROOT}/src/ssl_misc.c"
+    "${WOLFSSL_ROOT}/src/x509.c"
+    "${WOLFSSL_ROOT}/src/x509_str.c"
+    "${WOLFSSL_ROOT}/wolfcrypt/src/evp.c"
+    "${WOLFSSL_ROOT}/wolfcrypt/src/misc.c"
+)
+
+add_library(wolfssl STATIC
+    ${WOLFSSL_SRC}
+)
+target_include_directories(wolfssl PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/config
+    )
+target_compile_definitions(wolfssl PRIVATE
+    WOLFSSL_USER_SETTINGS
+    WOLFSSL_SP_ARM_THUMB_ASM
+)
+
+
+add_executable(testwolfcrypt
+    src/test_main.c
+    src/blink.c
+    ${WOLFSSL_ROOT}/wolfcrypt/test/test.c
+)
+
+pico_enable_stdio_usb(testwolfcrypt 1)
+pico_enable_stdio_uart(testwolfcrypt 0)
+target_compile_definitions(testwolfcrypt PRIVATE
+    WOLFSSL_USER_SETTINGS
+)
+
+target_link_libraries(testwolfcrypt
+    wolfssl
+    pico_stdlib
+    pico_cyw43_arch_none
+    pico_rand
+)
+pico_add_extra_outputs(testwolfcrypt)
+
 
 add_executable(benchmark
     src/bench_main.c
     src/blink.c
-    wolfssl/wolfcrypt/benchmark/benchmark.c
+    ${WOLFSSL_ROOT}/wolfcrypt/benchmark/benchmark.c
 )
 
 pico_enable_stdio_usb(benchmark 1)
 pico_enable_stdio_uart(benchmark 0)
 target_compile_definitions(benchmark PRIVATE
-
+    WOLFSSL_USER_SETTINGS
 )
+
 target_link_libraries(benchmark
     wolfssl
     pico_stdlib
     pico_cyw43_arch_none
     pico_rand
-    #FreeRTOS-Kernel-Heap4 # FreeRTOS kernel and dynamic heap
 )
 pico_add_extra_outputs(benchmark)
 
-if(0)
-    add_executable(TCPclient
-        src/blink.c
-        # src/TCPclient.c
-        src/TCPclient_main.c
-    )
-
-    # enable usb output, disable uart output
-    pico_enable_stdio_usb(TCPclient 1)
-    pico_enable_stdio_uart(TCPclient 0)
-
-    target_compile_definitions(TCPclient PRIVATE
-
-        # CYW43_NETUTILS
-        # PICO_CYW43_ARCH_FREERTOS
-        TEST_TCP_SERVER_IP=\"${TEST_TCP_SERVER_IP}\"
-        WIFI_SSID=\"${WIFI_SSID}\"
-        WIFI_PASSWORD=\"${WIFI_PASSWORD}\"
-        PICO_CYW43_ARCH_POLL
-        NO_SYS=1
-
-        # SYS_LIGHTWEIGHT_PROT=1
-    )
-
-    target_link_libraries(TCPclient
-        pico_stdlib
-        pico_rand
-
-        # pico_cyw43_arch_lwip_sys_freertos
-        # pico_cyw43_arch_lwip_poll
-        # pico_cyw43_arch_none
-
-        pico_lwip
-        # pico_lwip_core4
-        # pico_lwip_core6
-        pico_cyw43_arch
-        pico_lwip_nosys
-        pico_async_context_poll
-        # pico_lwip_iperf
-
-        # pico_lwip_freertos
-        # pico_async_context_freertos
-        # pico_lwip_port
-        # pico_cyw43_driver
-        # pico_lwip_api
-        pico_lwip_netif
-        # FreeRTOS-Kernel
-        # FreeRTOS-Kernel-Heap4 # FreeRTOS kernel and dynamic heap
-    )
-
-    pico_add_extra_outputs(TCPclient)
-endif()
 
 add_executable(Wifi
     src/blink.c
@@ -151,6 +141,7 @@ pico_enable_stdio_usb(tcp_Client 1)
 pico_enable_stdio_uart(tcp_Client 0)
 
 target_compile_definitions(tcp_Client PRIVATE
+    WOLFSSL_USER_SETTINGS
     WIFI_SSID=\"${WIFI_SSID}\"
     WIFI_PASSWORD=\"${WIFI_PASSWORD}\"
     TEST_TCP_SERVER_IP=\"${TEST_TCP_SERVER_IP}\"
@@ -168,3 +159,36 @@ target_link_libraries(tcp_Client
 )
 
 pico_add_extra_outputs(tcp_Client)
+
+
+add_executable(tls_Client
+    src/blink.c
+    src/wifi.c
+    src/tcp.c
+    src/tlsClient_main.c
+)
+
+# enable usb output, disable uart output
+pico_enable_stdio_usb(tls_Client 1)
+pico_enable_stdio_uart(tls_Client 0)
+
+target_compile_definitions(tls_Client PRIVATE
+    WOLFSSL_USER_SETTINGS
+    WIFI_SSID=\"${WIFI_SSID}\"
+    WIFI_PASSWORD=\"${WIFI_PASSWORD}\"
+    TEST_TCP_SERVER_IP=\"${TEST_TCP_SERVER_IP}\"
+    PICO_CYW43_ARCH_POLL
+    NO_SYS=1
+)
+
+target_link_libraries(tls_Client
+    pico_stdlib
+    pico_rand
+    pico_lwip
+    pico_cyw43_arch
+    pico_lwip_nosys
+    pico_async_context_poll
+    wolfssl
+)
+
+pico_add_extra_outputs(tls_Client)
